<resources>
    <string name="app_name">onoff</string>
    <string name="app_title">오노프</string>
    <string name="label_app_bar_user">마이페이지</string>
    <string name="label_app_bar_chat">채팅</string>
    <string name="label_app_bar_board">게시판</string>
    <string name="label_app_bar_board_post">게시판 글쓰기</string>
    <string name="label_app_bar_user_edit">프로필 수정하기</string>

    <string name="error_message_sign_in">로그인에 실패했습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="error_message_retry">잠시 후 다시 시도해주세요.</string>
    <string name="guide_message_invalid_nick_name">2~6자 닉네임 입력해주세요.</string>
    <string name="error_message_location_permission">위치 권한을 허용해 주세요.</string>
    <string name="description_off_image">위치 권한 에러 상태를 나타내는 이미지</string>
    <string name="error_message_search_place_name">장소를 다시 입력해주세요.</string>
    <string name="error_message_place_info_name">장소를 다시 입력해주세요.</string>
    <string name="error_message_not_same_place">해당 장소가 현재위치와 다릅니다.</string>
    <string name="error_message_place_info">동네 정보를 불러올 수 없습니다.</string>
    <string name="error_message_invalid_title">제목을 입력해 주세요.</string>
    <string name="error_message_invalid_body">내용을 입력해 주세요.</string>

    <string name="label_post_destination">Post</string>
    <string name="label_home_destination">Home</string>
    <string name="label_sign_in_destination">SignIn</string>
    <string name="label_launcher_destination">Launcher</string>
    <string name="label_detail_destination">Detail</string>
    <string name="label_info_input_destination">InfoInput</string>
    <string name="label_chat_destination">Chat</string>
    <string name="label_board_destination">Board</string>
    <string name="label_user_destination">User</string>
    <string name="label_search_destination">Search</string>
    <string name="label_chat_room_destination">ChatRoom</string>
    <string name="label_edit_destination">Edit</string>
    <string name="label_location_permission_off_destination">위치 권한 요청 안내 다이얼로그</string>

    <string name="hint_info_input_nickname">닉네임을 입력하세요</string>
    <string name="btn_submit_user_info">시작하기</string>
    <string name="btn_log_out">로그아웃</string>
    <string name="label_chat_room_search_again">현재 위치에서 재검색</string>
    <string name="hint_info_input_place_name">장소를 입력하세요.</string>
    <string name="description_selected_photo">선택한 이미지</string>
    <string name="description_delete_photo">선택한 이미지 삭제 버튼</string>
    <string name="description_select_image">카메라 이미지</string>
    <string name="post_title_hint">제목</string>
    <string name="post_description_hint">게시할 내용을 작성해주세요</string>

    <string name="label_enter_chat_room">입장하기</string>
    <string name="label_create_chat_room">생성하기</string>
    <string name="label_post_send_btn">완료</string>
    <string name="label_add">Add</string>
    <string name="label_edit">Edit</string>

    <string name="format_image_size_limit">/%d</string>
    <string name="format_file_name">%s_%s</string>

    <string name="elapsed_time_seconds">%d초 전</string>
    <string name="elapsed_time_minutes">%d분 전</string>
    <string name="elapsed_time_hours">%d시간 전</string>
    <string name="elapsed_time_days">%d일 전</string>
    <string name="elapsed_time_weeks">%d주 전</string>
    <string name="elapsed_time_months">%d달 전</string>
    <string name="label_network_error">네트워크 연결 끊어짐</string>
    <string name="label_nothing_post">게시물이 없습니다.</string>
    <string name="label_error_same_place">해당 장소와 위치가 일치하지 않습니다.</string>
</resources>