<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_launcher">

    <fragment
        android:id="@+id/navigation_launcher"
        android:name="com.anshyeon.onoff.ui.launcher.LauncherFragment"
        android:label="@string/label_launcher_destination">
        <action
            android:id="@+id/action_launcher_to_sign_in"
            app:destination="@id/navigation_sign_in"
            app:popUpTo="@id/navigation_launcher"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_launcher_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_launcher"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_sign_in"
        android:name="com.anshyeon.onoff.ui.signin.SignInFragment"
        android:label="@string/label_sign_in_destination"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/action_sign_in_to_info_input"
            app:destination="@id/navigation_info_input"
            app:popUpTo="@id/navigation_sign_in"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_sign_in_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_sign_in"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.anshyeon.onoff.ui.home.HomeFragment"
        android:label="@string/label_home_destination"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_permissionOffDialogFragment"
            app:destination="@id/navigation_location_permission_off_dialog" />
    </fragment>
    <fragment
        android:id="@+id/navigation_info_input"
        android:name="com.anshyeon.onoff.ui.infoInput.InfoInputFragment"
        android:label="@string/label_info_input_destination"
        tools:layout="@layout/fragment_info_input">
        <action
            android:id="@+id/action_info_input_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_info_input"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.anshyeon.onoff.ui.chat.ChatFragment"
        android:label="@string/label_chat_destination"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/navigation_board"
        android:name="com.anshyeon.onoff.ui.board.BoardFragment"
        android:label="@string/label_board_destination"
        tools:layout="@layout/fragment_board" />
    <fragment
        android:id="@+id/navigation_user"
        android:name="com.anshyeon.onoff.ui.user.UserFragment"
        android:label="@string/label_user_destination"
        tools:layout="@layout/fragment_user" />
    <dialog
        android:id="@+id/navigation_location_permission_off_dialog"
        android:name="com.anshyeon.onoff.ui.common.PermissionOffDialogFragment"
        android:label="@string/label_location_permission_off_destination" />
</navigation>