<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="location"
            type="String" />

        <variable
            name="viewModel"
            type="com.anshyeon.onoff.ui.post.PostViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.post.PostFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_post"
            style="@style/ToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/network_error_bar"
            app:navigationIcon="@drawable/ic_arrow"
            app:title="@string/label_app_bar_board_post" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_post"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="17dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_post" />

        <EditText
            android:id="@+id/et_post_title"
            style="@style/TextTitle18"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="49dp"
            android:backgroundTint="@color/grey"
            android:hint="@string/post_title_hint"
            android:inputType="text"
            android:text="@={viewModel.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_post" />

        <EditText
            android:id="@+id/et_post_description"
            style="@style/TextBody16"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/post_description_hint"
            android:inputType="textMultiLine"
            android:text="@={viewModel.body}"
            app:layout_constraintBottom_toTopOf="@id/btn_post_send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_post_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_post_send"
            style="@style/TextTitle18.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:onClick="@{() -> viewModel.submitPost(location)}"
            android:text="@string/label_post_send_btn"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.anshyeon.onoff.ui.common.ProgressIndicatorView
            android:id="@+id/loading_progress_indicator"
            visible="@{viewModel.isLoading}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <com.anshyeon.onoff.ui.common.NetworkErrorView
            android:id="@+id/network_error_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>